# TestFusion

./: .env.example  .gitignore  PRD.MD  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: 失败诊断.mdc  用例编译.mdc  系统蓝牙.mdc  设备恢复.mdc  首页冒烟.mdc  鸿蒙显示与声音.mdc  鸿蒙权限弹窗.mdc  鸿蒙系统开关.mdc  鸿蒙系统设置.mdc  鸿蒙系统面板.mdc
agent/: ambiguity_detector.py  assertion_builder.py  case_normalizer.py  case_parser.py  checkpoint_extractor.py  executability_scorer.py  failure_analyzer.py  planner.py  raw_case_ingestor.py  report_writer.py  skill_router.py
agent/schemas/: __init__.py  assertion_spec_schema.py  normalized_case_schema.py  plan_schema.py  raw_case_schema.py  result_schema.py  step_schema.py
assertions/: __init__.py  engine.py
assertions/dsl/: __init__.py  (+3 more)
case_input/: __init__.py  case_loader.py  excel_loader.py
ci/: Jenkinsfile  gitlab-ci.yml
configs/: framework.yaml
core/: __init__.py
docs/: project_guide.md
dsl/: __init__.py  compiler.py  models.py
mcp_server/: __init__.py  legacy_compat_tools.py  mobile_toolkit.py  server.py  tool_registry.py
scripts/: export_report.py  prepare_device.py  run_case.py  run_suite.py  start_mcp_server.py
skills/: __init__.py  action_registry.py  关闭NFC.md  关闭WLAN.md  关闭个人热点.md  关闭定位.md  关闭移动数据.md  关闭蓝牙.md  关闭飞行模式.md  处理权限弹窗.md  打开NFC.md  打开WLAN.md  打开个人热点.md  打开定位.md  打开控制中心.md  打开移动数据.md  打开系统设置.md  打开系统设置页.md  打开蓝牙.md  打开通知中心.md  打开飞行模式.md  深色模式.md  自动旋转.md  设备恢复.md  调整亮度.md  调整音量.md  首页冒烟.md  首页观察.md
tests/: __init__.py  conftest.py
verification/: __init__.py  failure_analyzer.py  report_writer.py
(+66 files in other folders)
